--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 project(TrackpointSound)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Optional: Ensure no fallback to older standards
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 add_subdirectory(TrackpointSound)
